add album and delete it and move images from album to another

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -45,7 +45,8 @@
 
 .image-container .image-child{
     width: 24%;
-    height: 24%;
+    height: 220px;
+    display: flex;
 }
 
 .image-container .image-child img{
